k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateful-node-app
  namespace: stateful-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful-node-app
  template:
    metadata:
      labels:
        app: stateful-node-app
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: app
          image: Build_Tag
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
