k8s/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: stateful-app
  labels:
    app: mongo
spec: 
  ports:
    - port: 27017
      targetPort: 27017 
  clusterIP: None
  selector:
    app: mongo
